samples/_failures_safe/1761519981_44c9e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a669e88f.c: In function ‘main’:
./samples/SAFE/__tmp_a669e88f.c:191:20: error: missing terminating " character
  191 |             printf("Processing complete. Enter START to begin again or QUIT to
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a669e88f.c:191:13: error: expected expression at end of input
  191 |             printf("Processing complete. Enter START to begin again or QUIT to
      |             ^~~~~~
./samples/SAFE/__tmp_a669e88f.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a669e88f.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a669e88f.c:191:13: error: expected declaration or statement at end of input
